# pdfTablesToHtml

./: .env  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  main.py  pyproject.toml
